# turma-do-gatil-back/src/main/java/br/com/udesc/turma_do_gatil_back/dto/DashboardSummaryDto.java
@@ -4,14 +4,12 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
-import java.util.List;
-
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
 public class DashboardSummaryDto {
 
-    private List<CatDto> availableCats;
-    private List<SterilizationDto> pendingSterilizations;
-    private List<AdopterDto> registeredAdopters;
+    private Long availableCatsCount;
+    private Long pendingSterilizationsCount;
+    private Long registeredAdoptersCount;
 }
