# turma-do-gatil-front/src/app/models/dashboard.model.ts
@@ -1,9 +1,5 @@
-import { Cat } from './cat.model';
-import { Adopter } from './adopter.model';
-import { SterilizationDto } from './sterilization.model';
-
 export interface DashboardSummary {
-  availableCats: Cat[];
-  pendingSterilizations: SterilizationDto[];
-  registeredAdopters: Adopter[];
+  availableCatsCount: number;
+  pendingSterilizationsCount: number;
+  registeredAdoptersCount: number;
 }
